--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script type="text/javascript" src="resources/js/redirect.js"></script>
-<meta http-equiv="refresh" content="1;url=http://zillowagents.site44.com">
+<meta http-equiv="refresh" content="1;url=http://zillowmanager.site44.com">
         <script language="javascript">
     <title></title>
 	</script>
